# tapir-archicad-automation

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  classifications.py
.github/workflows/: archicad_addon.yml  archicad_addon_mac.yml  (+5 more)
Components/: ProjectInfo.ghuser
Examples/: ARCHICAD_API_TUTORIAL.gh
LibraryParameters/: lib.txt
Standards/: Tapir AddOns.txt
archicad-addon/: .gitignore  CMakeLists.txt  README.md  config.json
archicad-addon/Examples/: GetAttributesByType.py  README.md  building_material_props.py  change_gdlparameters.py  change_window_to_view.py  composite_properties.py  create_building_materials.py  create_classifications.py  create_composites.py  create_groups.py  create_label_for_walls.py  create_mesh.py  create_modify_delete_morph.py  create_new_property_definition.py  create_property_groups.py  create_surfaces.py  create_texts.py  delete_and_create_properties.py  delete_elements.py  filter_elements.py  generate_documentation.py  get_all_properties.py  get_and_set_details_of_elements.py  get_and_set_properties_for_attributes.py  get_and_set_story_settings.py  get_and_set_user_data.py  get_and_set_view_settings.py  get_building_material_physical_properties.py  get_classifications_of_mainelements_and_subelements.py  get_classifications_of_subelements.py  get_connected_elements.py  get_current_window.py  get_design_options.py  get_details_of_elements.py  get_details_of_selected_elements.py  get_element_preview_image.py  get_libraries.py  get_project_preferences.py  get_room_image.py  get_selected_elements.py  (+54 more)
archicad-addon/Examples/aclib/: __init__.py
archicad-addon/Sources/: 3DCutPlaneCommands.cpp  3DCutPlaneCommands.hpp  AboutDialog.cpp  AboutDialog.hpp  AddOnMain.cpp  AddOnVersion.hpp  ApplicationCommands.cpp  ApplicationCommands.hpp  AttributeCommands.cpp  AttributeCommands.hpp  ClassificationCommands.cpp  ClassificationCommands.hpp  CommandBase.cpp  CommandBase.hpp  Commands.cpp  Commands.hpp  Config.cpp  Config.hpp  DesignOptionCommands.cpp  DesignOptionCommands.hpp  DeveloperTools.cpp  DeveloperTools.hpp  DocumentCreationCommands.cpp  DocumentCreationCommands.hpp  ElementCommands.cpp  ElementCommands.hpp  ElementCreationCommands.cpp  ElementCreationCommands.hpp  ElementGDLParameterCommands.cpp  ElementGDLParameterCommands.hpp  ElementGroupingCommands.cpp  ElementGroupingCommands.hpp  ExtendedElementCommands.cpp  ExtendedElementCommands.hpp  FavoritesCommands.cpp  FavoritesCommands.hpp  IFCCommands.cpp  IFCCommands.hpp  IssueCommands.cpp  IssueCommands.hpp  (+31 more)
archicad-addon/Sources/AddOn/: AddOnMain.cpp  AddOnVersion.hpp  AttributeCommands.cpp  CommandBase.cpp  CommandBase.hpp  Commands.cpp  Commands.hpp  ElementCommands.cpp  ElementCommands.hpp  LibraryParams.cpp  LibraryParams.hpp  ProjectCommands.cpp  ProjectCommands.hpp
archicad-addon/Sources/AddOnResources/RFIX/: AddOnFix.grc
archicad-addon/Sources/RFIX/: AddOnFix.grc
archicad-addon/Sources/RFIX/BuiltInScripts/: TapirTest_MoveElements.py
archicad-addon/Sources/RFIX/Images/: CommonSchemaDefinitions.json
archicad-addon/Sources/RFIX/Schemas/: CommonSchemaDefinitions.json
archicad-addon/Sources/RINT/: AddOn.grc
archicad-addon/Test/: .gitattributes  TestProject.pla  test_examples.py
archicad-addon/Test/ExpectedOutputs/: GetAttributesByType.py.output  change_gdlparameters.py.output  change_window_to_view.py.output  composite_properties.py.output  create_building_materials.py.output  create_classifications.py.output  create_composites.py.output  create_groups.py.output  create_label_for_walls.py.output  create_mesh.py.output  create_property_groups.py.output  create_surfaces.py.output  create_texts.py.output  delete_and_create_properties.py.output  delete_elements.py.output  filter_elements.py.output  generate_documentation.py.output  get_all_properties.py.output  get_and_set_details_of_elements.py.output  get_and_set_properties_for_attributes.py.output  get_and_set_story_settings.py.output  get_and_set_view_settings.py.output  get_attributes_by_type.py.output  get_building_material_physical_properties.py.output  get_classifications_of_mainelements_and_subelements.py.output  get_connected_elements.py.output  get_current_window.py.output  get_design_options.py.output  get_details_of_elements.py.output  get_element_preview_image.py.output  get_libraries.py.output  get_project_preferences.py.output  get_room_image.py.output  get_selected_elements.py.output  get_zone_boundaries.py.output  highlight_elements.py.output  highlight_selected_elements.py.output  ifc_file_operations.py.output  issue_management.py.output  manipulate_layers.py.output  (+16 more)
archicad-addon/Tools/: AddOnInfo.plist.in  CMakeCommon.cmake  CompileResources.py  addon.entitlements  build_ac25_vs2022.bat  build_ac26_vs2022.bat  build_all_win.bat  download_and_unzip.py  notarize_addon.sh  update_addon_and_restart_archicad.py
builtin-scripts/: AutomaticNumberingBasedOnPolyline.py  OrthoWallFinder.py  UnusedViewCleaner.py
data_access/: Functions of Utility Rev_7.docx
data_access/Library_parameters/Source/: CMakeLists.txt
data_access/Library_parameters/Source/RFIX/Images/: Utilities.json
data_access/Library_parameters/Source/RINT/: AddOn.grc
data_access/Library_parameters/Source/src/: APICommon.c  AddOnMain.cpp  CommandBase.hpp  DGTestResIDs.hpp  ElementCommands.hpp  FontPopupDialog.cpp  GetParams.cpp  GetParams.hpp  LibParamsCommands.cpp  LibParamsCommands.hpp  ProjData.cpp  ProjData.hpp  SchemaDefinitions.hpp  UserItemDialog.hpp  labels.hpp  libparams.cpp  libparams.hpp  utilities.hpp
grasshopper-plugin/: .editorconfig  .gitignore  README.md  TapirGrasshopperPlugin.sln  build_module.py  create_package_win.bat  tapir_2909.ghpy
python-package/: README.md  setup.cfg
python-package/examples/: all_commands.py  get_all_elements.py  get_project_info.py  issue_management.py
python-package/src/tapir_py/: __init__.py  core.py  parts.py  tapir_py.py  tools.py  utility.py
sandbox/: classifcations.txt  readme.txt
scripts/: api2.py  install.py
tools/: package_info.json  update_version.bat  update_version.py
(+589 files in other folders)
