[metadata]
name = tapir_py
version = 0.1.0
author = EnzymeAPD
author_email = none
description = A Python package to use the JSON API from ArchiCAD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ENZYME-APD/archicad-api
project_urls =
    Bug Tracker = https://github.com/ENZYME-APD/archicad-api-dev/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.9.7
    License :: OSI Approved :: General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src