[metadata]
name = tapir_py
version = 1.1.0
author = EnzymeAPD
author_email = kaushiklsk96+tapir.py@gmail.com
description = A Python package to use the JSON API from ArchiCAD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ENZYME-APD/tapir-archicad-automation
project_urls =
    Bug Tracker = https://github.com/ENZYME-APD/tapir-archicad-automation/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: IronPython
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src
